--- a/app/src/main/res/layout/activity_char_17.xml
+++ b/app/src/main/res/layout/activity_char_17.xml
@@ -44,14 +44,14 @@
             android:id="@+id/v2"
             app:layout_heightPercent="10%"
             app:layout_marginLeftPercent="45%"
-            app:layout_marginTopPercent="30%"
+            app:layout_marginTopPercent="33%"
             app:layout_widthPercent="10%" />
 
         <ImageView
             android:id="@+id/v3"
             app:layout_heightPercent="10%"
             app:layout_marginLeftPercent="55%"
-            app:layout_marginTopPercent="40%"
+            app:layout_marginTopPercent="37%"
             app:layout_widthPercent="5%" />
 
         <ImageView
@@ -128,28 +128,28 @@
             android:id="@+id/v14"
             app:layout_heightPercent="10%"
             app:layout_marginLeftPercent="45%"
-            app:layout_marginTopPercent="40%"
+            app:layout_marginTopPercent="41%"
             app:layout_widthPercent="10%" />
 
         <ImageView
             android:id="@+id/v15"
             app:layout_heightPercent="10%"
             app:layout_marginLeftPercent="40%"
-            app:layout_marginTopPercent="40%"
+            app:layout_marginTopPercent="37%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v16"
             app:layout_heightPercent="10%"
             app:layout_marginLeftPercent="45%"
-            app:layout_marginTopPercent="50%"
+            app:layout_marginTopPercent="49%"
             app:layout_widthPercent="10%" />
 
         <ImageView
             android:id="@+id/v17"
             app:layout_heightPercent="10%"
             app:layout_marginLeftPercent="45%"
-            app:layout_marginTopPercent="60%"
+            app:layout_marginTopPercent="57%"
             app:layout_widthPercent="10%" />
 
         <ImageView
@@ -159,33 +159,32 @@
             app:layout_marginTopPercent="65%"
             app:layout_widthPercent="10%" />
 
-
         <ImageView
             android:id="@+id/b1"
             android:src="@drawable/b1"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="16%"
             app:layout_marginTopPercent="20%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b2"
             android:src="@drawable/b2"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="20%"
-            app:layout_marginTopPercent="40%"
-            app:layout_widthPercent="10%" />
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="16%"
+            app:layout_marginTopPercent="42%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b3"
             android:src="@drawable/b3"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="18%"
             app:layout_marginTopPercent="60%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b4"
@@ -193,10 +192,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b4"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="16%"
             app:layout_marginTopPercent="40%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b5"
@@ -204,10 +203,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b5"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="14%"
             app:layout_marginTopPercent="30%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b6"
@@ -215,10 +214,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b6"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
-            app:layout_marginTopPercent="40%"
-            app:layout_widthPercent="10%" />
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="4%"
+            app:layout_marginTopPercent="44%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b7"
@@ -226,10 +225,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b7"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="14%"
             app:layout_marginTopPercent="50%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b8"
@@ -237,10 +236,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b1"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="4%"
             app:layout_marginTopPercent="60%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b9"
@@ -248,148 +247,148 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b2"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
-            app:layout_marginTopPercent="70%"
-            app:layout_widthPercent="10%" />
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="16%"
+            app:layout_marginTopPercent="65%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b10"
             android:src="@drawable/b3"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="10%"
-            app:layout_marginTopPercent="60%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="64%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b11"
             android:src="@drawable/b4"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="8%"
             app:layout_marginTopPercent="50%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b12"
-            android:src="@drawable/b4"
+            android:src="@drawable/b5"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="6%"
             app:layout_marginTopPercent="40%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b13"
-            android:src="@drawable/b4"
+            android:src="@drawable/b6"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="10%"
             app:layout_marginTopPercent="30%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b14"
-            android:src="@drawable/b4"
+            android:src="@drawable/b7"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="30%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="6%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b15"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b4"
+            android:src="@drawable/b1"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginRightPercent="30%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="7%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b16"
-            android:src="@drawable/b4"
+            android:src="@drawable/b2"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="20%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="9%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b17"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b7"
+            android:src="@drawable/b3"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="7%"
             app:layout_marginTopPercent="70%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b18"
             android:src="@drawable/b4"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="40%"
             app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b19"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b4"
+            android:src="@drawable/b5"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginRightPercent="40%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="4%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b20"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b4"
+            android:src="@drawable/b6"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="6%"
             app:layout_marginTopPercent="15%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b21"
-            android:src="@drawable/b4"
+            android:src="@drawable/b7"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="21%"
             app:layout_marginTopPercent="70%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b22"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b5"
+            android:src="@drawable/b1"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="18%"
             app:layout_marginTopPercent="20%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b23"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b5"
+            android:src="@drawable/b2"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
-            app:layout_marginTopPercent="30%"
-            app:layout_widthPercent="10%" />
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="3%"
+            app:layout_marginTopPercent="28%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:src="@drawable/exit"
