--- a/app/src/main/res/layout/activity_char_19.xml
+++ b/app/src/main/res/layout/activity_char_19.xml
@@ -37,98 +37,98 @@
         <ImageView
             android:id="@+id/v1"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="40%"
-            app:layout_marginTopPercent="35%"
+            app:layout_marginLeftPercent="40.5%"
+            app:layout_marginTopPercent="32.5%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v2"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="40%"
+            app:layout_marginLeftPercent="40.5%"
             app:layout_marginTopPercent="24%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v3"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="40%"
+            app:layout_marginLeftPercent="40.5%"
             app:layout_marginTopPercent="66%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v4"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="40%"
-            app:layout_marginTopPercent="46%"
+            app:layout_marginLeftPercent="40.5%"
+            app:layout_marginTopPercent="49.5%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v5"
             app:layout_heightPercent="10%"
             app:layout_marginLeftPercent="58%"
-            app:layout_marginTopPercent="60%"
+            app:layout_marginTopPercent="55%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v6"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="44%"
-            app:layout_marginTopPercent="44%"
+            app:layout_marginLeftPercent="40.5%"
+            app:layout_marginTopPercent="41%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v7"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="49%"
+            app:layout_marginLeftPercent="45.5%"
             app:layout_marginTopPercent="44%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v8"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="58%"
-            app:layout_marginTopPercent="50%"
+            app:layout_marginLeftPercent="55%"
+            app:layout_marginTopPercent="46%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v9"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="54%"
-            app:layout_marginTopPercent="66%"
+            app:layout_marginLeftPercent="55%"
+            app:layout_marginTopPercent="64%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v10"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="54%"
+            app:layout_marginLeftPercent="50%"
             app:layout_marginTopPercent="44%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v11"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="49%"
+            app:layout_marginLeftPercent="50%"
             app:layout_marginTopPercent="66%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v12"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="40%"
-            app:layout_marginTopPercent="56%"
+            app:layout_marginLeftPercent="40.5%"
+            app:layout_marginTopPercent="58%"
             app:layout_widthPercent="5%" />
 
         <ImageView
             android:id="@+id/v13"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="44%"
+            app:layout_marginLeftPercent="45.5%"
             app:layout_marginTopPercent="66%"
             app:layout_widthPercent="5%" />
 
         <ImageView
-            android:id="@+id/v15"
+            android:id="@+id/v14"
             app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="35%"
+            app:layout_marginLeftPercent="35.5%"
             app:layout_marginTopPercent="24%"
             app:layout_widthPercent="5%" />
 
@@ -138,28 +138,28 @@
             android:id="@+id/b1"
             android:src="@drawable/b1"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="16%"
             app:layout_marginTopPercent="20%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b2"
             android:src="@drawable/b2"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="20%"
-            app:layout_marginTopPercent="40%"
-            app:layout_widthPercent="10%" />
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="16%"
+            app:layout_marginTopPercent="42%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b3"
             android:src="@drawable/b3"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="18%"
             app:layout_marginTopPercent="60%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b4"
@@ -167,10 +167,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b4"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="16%"
             app:layout_marginTopPercent="40%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b5"
@@ -178,10 +178,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b5"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="14%"
             app:layout_marginTopPercent="30%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b6"
@@ -189,10 +189,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b6"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
-            app:layout_marginTopPercent="40%"
-            app:layout_widthPercent="10%" />
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="4%"
+            app:layout_marginTopPercent="44%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b7"
@@ -200,10 +200,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b7"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="14%"
             app:layout_marginTopPercent="50%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b8"
@@ -211,10 +211,10 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b1"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="4%"
             app:layout_marginTopPercent="60%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b9"
@@ -222,148 +222,148 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/b2"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
-            app:layout_marginTopPercent="70%"
-            app:layout_widthPercent="10%" />
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="16%"
+            app:layout_marginTopPercent="65%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b10"
             android:src="@drawable/b3"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="10%"
-            app:layout_marginTopPercent="60%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="64%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b11"
             android:src="@drawable/b4"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="8%"
             app:layout_marginTopPercent="50%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b12"
-            android:src="@drawable/b4"
+            android:src="@drawable/b5"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="6%"
             app:layout_marginTopPercent="40%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b13"
-            android:src="@drawable/b4"
+            android:src="@drawable/b6"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="10%"
             app:layout_marginTopPercent="30%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b14"
-            android:src="@drawable/b4"
+            android:src="@drawable/b7"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="30%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="6%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b15"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b4"
+            android:src="@drawable/b1"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginRightPercent="30%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="7%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b16"
-            android:src="@drawable/b4"
+            android:src="@drawable/b2"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="20%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="9%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b17"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b7"
+            android:src="@drawable/b3"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="7%"
             app:layout_marginTopPercent="70%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b18"
             android:src="@drawable/b4"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginLeftPercent="40%"
             app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b19"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b4"
+            android:src="@drawable/b5"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
             app:layout_marginRightPercent="40%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="10%" />
+            app:layout_marginTopPercent="4%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b20"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b4"
+            android:src="@drawable/b6"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="6%"
             app:layout_marginTopPercent="15%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b21"
-            android:src="@drawable/b4"
+            android:src="@drawable/b7"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginLeftPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginLeftPercent="21%"
             app:layout_marginTopPercent="70%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b22"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b5"
+            android:src="@drawable/b1"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="20%"
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="18%"
             app:layout_marginTopPercent="20%"
-            app:layout_widthPercent="10%" />
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
         <ImageView
             android:id="@+id/b23"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/b5"
+            android:src="@drawable/b2"
             android:visibility="invisible"
-            app:layout_heightPercent="10%"
-            app:layout_marginRightPercent="10%"
-            app:layout_marginTopPercent="30%"
-            app:layout_widthPercent="10%" />
+            app:layout_heightPercent="@dimen/item_ball_size"
+            app:layout_marginRightPercent="3%"
+            app:layout_marginTopPercent="28%"
+            app:layout_widthPercent="@dimen/item_ball_size" />
 
 
         <ImageView
