--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,16 @@
                 app:layout_heightPercent="35%"
                 app:layout_widthPercent="35%"/>
 
+            <ImageView
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/mainfront"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+
         </android.support.percent.PercentRelativeLayout>
 
 
@@ -54,13 +64,13 @@
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:src="@drawable/ifolica" />
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:src="@drawable/title" />
 
@@ -68,7 +78,7 @@
                         android:id="@+id/ivMenu"
                         android:contentDescription="menu"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1.5"
                         android:src="@drawable/menu_button" />
 
@@ -1048,7 +1058,7 @@
                     android:scaleType="fitCenter"
                     android:src="@drawable/footer"
                     app:layout_widthPercent="75%"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     />
 
             </android.support.percent.PercentRelativeLayout>
