--- a/app/src/main/res/layout/activity_parent.xml
+++ b/app/src/main/res/layout/activity_parent.xml
@@ -10,11 +10,21 @@
         android:layout_height="match_parent"
     android:background="@android:color/white">
 
-        <ImageView
+        <ScrollView
+
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:src="@drawable/menu_parent_content" />
+            android:layout_height="match_parent">
+                <ImageView
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/menu_parent_content" />
+
+
+
+
+        </ScrollView>
 
         <ImageView
             android:id="@+id/rlExit"
@@ -23,6 +33,8 @@
             android:src="@drawable/menu_parent_back_btn"
             app:layout_heightPercent="10%"
             app:layout_widthPercent="10%"
+            app:layout_marginTopPercent="2%"
+            app:layout_marginRightPercent="6%"
             />
 
         </android.support.percent.PercentRelativeLayout>
