--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <item name="margin_item" type="dimen">10%</item>
     <item name="exit_btn_size" type="dimen">10%</item>
     <item name="exit_btn_margin" type="dimen">2%</item>
-    <item name="item_ball_width" type="dimen">5%</item>
+    <item name="item_ball_size" type="dimen">7.2%</item>
 </resources>
